--- a/daemon/process/dobby.service
+++ b/daemon/process/dobby.service
@@ -39,6 +39,7 @@ After=dbus.socket dbus.service
 
 [Service]
 Type=notify
+ExecStartPre=/bin/sh -c "echo \"/opt/%%e.%%s.core\" > /proc/sys/kernel/core_pattern && ulimit -c unlimited"
 ExecStart=/usr/sbin/DobbyDaemon --nofork --noconsole --journald
 WatchdogSec=30
 Restart=on-failure
